fix overflow elements showing outside viewport

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ div#root {
 	width: 100%;
 	margin: 0;
 	padding: 0;
+	position: relative;
+	overflow: hidden;
 }
 
 h1,
